# audiofile

./: CMakeLists.txt  FindFlac.cmake  GenerateConfig.cmake  config.h.cmake.in
docs/: CMakeLists.txt
examples/: CMakeLists.txt
gtest/: CMakeLists.txt
libaudiofile/: CMakeLists.txt
libaudiofile/alac/: CMakeLists.txt
libaudiofile/modules/: CMakeLists.txt
sfcommands/: CMakeLists.txt
test/: CMakeLists.txt
